--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "glitch-hello-node",
   "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
-  "main": "server.js",
+  "description": "AN OP BLOOKET BOT CHEAT",
+  "main": "blooketbot.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node blooketbot.js"
   },
   "dependencies": {
-    "fastify": "^4.21.0",
-    "handlebars": "^4.7.8",
     "@fastify/formbody": "^7.4.0",
     "@fastify/static": "^6.10.2",
-    "@fastify/view": "^8.0.0"
+    "@fastify/view": "^8.0.0",
+    "express": "^4.18.3",
+    "fastify": "^4.21.0",
+    "firebase": "^10.8.1",
+    "handlebars": "^4.7.8",
+    "request-promise": "^4.2.6",
+    "ws": "^8.16.0"
   },
   "engines": {
     "node": "14.x"
@@ -22,6 +26,9 @@
   "license": "MIT",
   "keywords": [
     "node",
-    "glitch"
+    "glitch",
+    "blooket",
+    "bot",
+    "overpowered"
   ]
 }
