--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fastify": "^4.21.0",
     "firebase": "^10.8.1",
     "handlebars": "^4.7.8",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "ws": "^8.16.0"
   },
