--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fastify/view": "^8.0.0",
     "express": "^4.18.3",
     "fastify": "^4.21.0",
+    "fetch": "^1.1.0",
     "firebase": "^10.8.1",
     "handlebars": "^4.7.8",
+    "node-fetch": "^3.3.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "ws": "^8.16.0"
