--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "express": "^4.18.3",
     "fastify": "^4.21.0",
     "fetch": "^1.1.0",
+    "ffmpeg": "0.0.4",
     "firebase": "^10.8.1",
     "handlebars": "^4.7.8",
+    "jimp": "^0.22.12",
     "node-fetch": "^3.3.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "ws": "^8.16.0"
+    "tesseract.js": "^5.0.5",
+    "ws": "^8.16.0",
+    "yt-dlp": "^0.1.0"
   },
   "engines": {
     "node": "14.x"
